--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "normalize-url": "^6.0.1"
   }
 }
